...
        case .rules2024: CompendiumSourceDocument.srd5_2.displayName
        }
    }

    private func accessibilityIdentifier(for ruleset: DefaultContentRuleset) -> String {
        switch ruleset {
        case .rules2014: "default-content-card-2014"
        case .rules2024: "default-content-card-2024"
        }
    }

    private func subtitle(for ruleset: DefaultContentRuleset) -> String {
        switch ruleset {
...
                prompt: "There are updates available for Basic Rules content with improvements to monster stat blocks and/or spell properties. Existing items with the same name will be overwritten.",
                primaryButtonTitle: primaryButtonTitle,
                primaryAction: {
                    store.send(.applySelection)
                }
            )
            .navigationTitle("Basic Rules content")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                if let cancelButtonTitle, let cancelAction {
                    ToolbarItem(placement: .cancellationAction) {
                        Button(cancelButtonTitle, action: cancelAction)
                    }
...
