...
        .alert($store.scope(state: \.alert, action: \.alert))
    }

    private var benefitsPage: some View {
        VStack(spacing: 20) {
            ScrollView(.vertical) {
                Text("Welcome to Construct")
                    .font(Font.largeTitle.bold())
                    .multilineTextAlignment(.center)
                    .accessibilityAddTraits([.isHeader])
                    .padding(.top, 22)
                    .padding(.bottom, 14)

...
