...
        .safeAreaInset(edge: .bottom) {
            RoundedButtonToolbar {
                if !store.state.isMoveMode {
                    Button(action: {
                        store.send(.setSheet(.nodeEdit(CampaignBrowseViewFeature.State.NodeEditState(name: "", node: nil))))
                    }) {
                        Label("New group", systemImage: "folder")
                    }

                    Button(action: {
                        store.send(.setSheet(.nodeEdit(CampaignBrowseViewFeature.State.NodeEditState(name: "", contentType: .encounter, node: nil))))
                    }) {
                        Label("New encounter", systemImage: "shield")
...
